Refactor appointment handling and repository structure
- Renamed and reorganized repository classes to improve clarity and structure.
- Introduced PersonalAppointmentRepositoryAdapter for handling personal appointments.
- Updated AppointmentService to utilize PersonalAppointmentRepository instead of a generic AppointmentRepository.
- Removed BaseRepository interface and integrated its functionality directly into the relevant repositories.
- Added new JPA repositories for Appointment, PersonalAppointment, GroupMeeting, RefreshToken, Reminder, and User.
- Updated methods to handle overlapping appointments and user-specific queries more effectively.
- Enhanced appointment validation and conflict resolution logic in AppointmentService.
- Improved access control for personal appointments and group meetings.